# cookidoo-mcp

./: .gitignore  README.md  install.sh  pyproject.toml
src/: constants.py  cookidoo_service.py  models.py  recipe_scraper.py  server.py  setup.py  thermomix_converter.py
